# ml-compiler

./: CMakeLists.txt
include/: codegen_ir.hpp
src/: codegen_c.cpp  codegen_ir.cpp  main.cpp
